Try tweaks in build.gradle.kts